syntax = "proto3";

//protoc -I api/protos/proto api/protos/proto/auth.proto --go_out=./api/protos/gen/auth --go_opt=paths=source_relative --go-grpc_out=./api/protos/gen/auth/ --go-grpc_opt=paths=source_relative

package users;

option go_package = "blog.auth.v1;authv1";

service Auth{
    rpc Register (RegisterDTO) returns (RegisterRTO);
    rpc Login (LoginDTO) returns (LoginRTO);
    rpc CheckAuth (CheckAuthDTO) returns (CheckAuthRTO);
}

message RegisterDTO{
    string email = 1;
    string password = 2;
    string fname = 3;
    string lname = 4;
}

message RegisterRTO{
    string token = 1;
}

message LoginDTO{
    string email = 1;
    string password = 2;
}

message LoginRTO{
    string token = 1;
}

message CheckAuthDTO{
    string token = 1;
}

message CheckAuthRTO{
    string token = 1;
}


